tests/e2e/semantics/float_int_equality_comp.error
Error: syntax error in story at line 1, column 5

1|    a = 2.5 == 2
          ^^^^^^^^

E0124: Equality comparison not supported between `float` and `int`.
